--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -1,3 +1,7 @@
-<p>
-  home works!
-</p>
+<h1>Home</h1>
+
+<!-- event binding :wrapp of (click) event & bind it to "firstclick()" method -->
+<!-- check tutorial for more event types:
+https://coursetro.com/posts/code/171/Angular-7-Tutorial---Learn-Angular-7-by-Example -->
+
+<button (click)="firstClick()">Click me</button>
