--- a/src/app/home/home.component.html
+++ b/src/app/home/home.component.html
@@ -4,15 +4,23 @@
   'green': h1Style,
   'large': !h1Style
 }">Home</h1> -->
-
+<h1>Home</h1>
 <!-- Style banding -->
 <!-- single css property  -->
   <!-- <h1 [style.color]="h1Style ? 'gray': 'black' ">Home</h1> -->
 <!-- multiple css properties  -->
-<h1 [ngStyle]="{
+<!-- <h1 [ngStyle]="{
   'color': h1Style? 'green' : 'black',
   'font-size': !h1Style? '1em' : '4em'
-}">Home</h1>
+}">Home</h1> -->
+
+<ul *ngIf="users">
+  <li *ngFor="let user of users.data">
+    <img [src]="user.avatar">
+    <p>{{ user.first_name }} {{ user.last_name }}</p>
+
+  </li>
+</ul>
 
 
 
@@ -21,4 +29,4 @@
 <!-- check tutorial for more event types:
 https://coursetro.com/posts/code/171/Angular-7-Tutorial---Learn-Angular-7-by-Example -->
 
-<button (click)="firstClick()">Click me</button>
+<!-- <button (click)="firstClick()">Click me</button> -->
